--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 
                 <div class="modal-form-field">
                     <label class="modal-form-name label-title" for="name">Имя</label>
-                    <input class="modal-form-input" type="text" name="user-name" id="name" required>
+                    <input class="modal-form-input" type="text" name="user-name" minlength="2" id="name" required>
                     <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/icons.svg/icons.svg.svg#icon-person-black"></use>
                     </svg>
@@ -360,7 +360,7 @@
                 
                 <div class="modal-form-field">
                     <label class="modal-form-phone label-title" for="phone">Телефон</label>
-                    <input class="modal-form-input" type="tel" name="user-phone" id="phone" required>
+                    <input class="modal-form-input" type="tel" name="user-phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="050-111-11-11" id="phone" required>
                     <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/icons.svg/icons.svg.svg#icon-phone-black"></use>
                     </svg>
